# MPCC

C++/: CMakeLists.txt  config.h  main.cpp  package.xml
C++/Constraints/: bounds.cpp  constraints.cpp  constraints.h
C++/Cost/: cost.cpp  cost.h
C++/Interfaces/: hpipm_interface.h
C++/MPC/: mpc.cpp  mpc.h
C++/Model/: bicycle_model.cpp  bicycle_model.h  integrator.h  model.cpp
C++/Params/: bounds.json  config.json  cost.json  model.json  normalization.json  params.cpp  params.h
C++/Plotting/: plotting.cpp  plotting.h
C++/Spline/: arc_length_spline.cpp
C++/Tests/: constratins_test.cpp  model_integrator_test.cpp  model_integrator_test.h  spline_test.cpp
