<?xml version="1.0"?>
<package>
  <name>model_predictive_contouring_control</name>
  <version>0.0.0</version>
  <description>The MPCC package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="gunhee6392@gmail.com">Geonhee-LEE</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv2</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!--rviz plugin="${prefix}/rviz_plugins.xml"/-->
  </export>

</package>
